test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-borrowed-from-oknil-unmanaged.good
init-field-arg-nonnil-borrowed-from-oknil-unmanaged.chpl:9: In initializer:
init-field-arg-nonnil-borrowed-from-oknil-unmanaged.chpl:10: error: cannot assign to non-nilable borrowed MyClass from nilable unmanaged MyClass?
